fix: syncing the horizontal scroll bar with the vertical one.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,21 +7,25 @@
 body::scrollbar,
 .scrollbar::scrollbar {
     width: 6px;
+    height: 6px;
     background-color: rgb(249 115 22);
 }
 body::scrollbar:horizontal,
 .scrollbar::scrollbar:horizontal {
     width: 6px;
+    height: 6px;
     background-color: rgb(249 115 22);
 }
 
 body::-webkit-scrollbar,
 .scrollbar::-webkit-scrollbar {
     width: 6px;
+    height: 6px;
 }
 body::-webkit-scrollbar:horizontal,
 .scrollbar::-webkit-scrollbar:horizontal {
     width: 6px;
+    height: 6px;
 }
 
 body::-webkit-scrollbar-thumb,
